...
            .padding(horizontal = 16.dp),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Spacer(modifier = Modifier.height(16.dp))

        Text(
            text = "Preferences (Select)",
            fontSize = 20.sp,
            modifier = Modifier
                .fillMaxWidth()
                .padding(vertical = 16.dp),
            textAlign = TextAlign.Center
        )
...
@Composable
private fun CuisineGrid(
    selectedCuisines: List<String>,
    onToggleCuisine: (String) -> Unit
) {
    val cuisineOptions = listOf(
        "Sushi", "Italian",
        "Pizza", "Japanese",
        "European", "Korean",
        "Middle Eastern", "Chinese"
    )

    Column(
...
            CircularProgressIndicator(
                color = Color.Black,
                modifier = Modifier.height(24.dp)
            )
        } else {
            Text(
                text = "Save Preferences",
                color = Color.Black,
                fontSize = 20.sp
            )
        }
    }

...
